// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DataDisplay matches snapshot when table is false 1`] = `
<div
  className="sc-aXZVg jJLMLP"
/>
`;

exports[`DataDisplay matches snapshot when table is true 1`] = `
<div
  className="sc-aXZVg NmhEc"
/>
`;
